--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   mobx: ^2.2.0
   flutter_mobx: ^2.0.6+5
   provider: ^6.0.5
+  json_annotation: ^4.8.1
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.6
   mobx_codegen: ^2.4.0
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
